# curso-analise-de-dados-em-linguagem-r

./: .gitignore  LICENSE  README.md  poetry.toml  pyproject.toml
docs/R/: DEBUG_VSCODE_R.md  INSTALL_R.md  LINTR.md
docs/R/INTRODUCAO/: R-VSCODE.md
notebooks/: Módulo 2 - Fundamentos da Linguagem R.ipynb
scripts/: Analisando dados abertos de viagens a serviço.R  Prevendo ocorrencia de diabetes.R
