[tool.poetry]
name = "app"
version = "0.1.0"
description = "Curso Análise de Dados em Linguagem R"
authors = ["Renan Carvalho <renan2.scarvalho@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
taskipy = "^1.12.2"
ruff = "^0.4.2"
httpx = "^0.27.0"
pytest-dependency = "^0.6.0"

[tool.ruff]
line-length = 105
extend-exclude = ['migrations']


[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']
ignore = [
    'PLR0914', 'PLR2004', 'PLR6301', 'PLR1702', 'PLR0915', 'F841', 'F403', 'PLC1901', 'PLW2901',
    'F405', 'PLR0911', 'PLR0912', 'E501', 'PLR1714', 'PLR0913', 'PLW1514',
    'PLC0415', 'PLR0917', 'PLR1722', 'PLW3201', 'F821', 'F401', 'PLR6104'
]

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.taskipy.tasks]
lint = 'ruff check .; ruff check . --diff'
format = 'ruff check . --fix; ruff format .'
run = 'uvicorn main:app --host=0.0.0.0 --port=8000 --reload'
pre_test = 'task lint'
test = 'coverage run --source=. -m pytest -s -x -vv'
post_test = 'coverage html'
clean = 'find . -name "*.pyc" -delete && find . -name "__pycache__" -type d -exec rm -rf {} +'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
